--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,9 @@
   </head>
   <body>
     <app-root></app-root>
+    <script
+      src="https://kit.fontawesome.com/993ed71081.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
